# cdis-dataflow-templates

./: .gitignore  .secrets.baseline  .travis.yml  Dockerfile  README.md  bucket_manifest_pipeline.py  pyproject.toml  requirements.txt  setup.py
bucket_manifest/: __init__.py  bucket.py  pub.py  settings.py  sub.py  utils.py
tests/: test_bucket_manifest.py
