[tool.poetry]
name = "google-bucket-manifest"
version = "0.1.0"
description = ""
authors = ["CTDS UChicago <cdis@uchicago.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
google-api-core = "^1.25.0"
google-cloud-storage = "^1.35.0"
apache-beam = "^2.27.0"
setuptools = "^51.1.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
