[tool.poetry]
name = "google-bucket-manifest"
version = "0.1.0"
description = ""
authors = ["CTDS UChicago <cdis@uchicago.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
"google.api_core" = "^1.20.0"
google-cloud-storage = "^1.28.0"
google-cloud-core = "^1.3.0"
google-cloud-pubsub = "^1.6.0"
setuptools = "^40.3.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
