[tool.poetry]
name = "google-bucket-manifest"
version = "0.1.0"
description = ""
authors = ["CTDS UChicago <cdis@uchicago.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
google-api-core = "^1.26.0"
google-cloud-storage = "^1.36.1"
google-cloud-core = "^1.6.0"
google-cloud-pubsub = "^2.4.0"
setuptools = "^54.0.0"
apache-beam = "^2.28.0"
apitools = "^0.1.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
